syntax = "proto3";

import "filters.proto";
import "types.proto";

package co.topl.genus.services;

service BlocksSubscription {
  rpc Create (CreateBlocksSubscriptionReq) returns (stream BlocksSubscriptionRes);
}

message CreateBlocksSubscriptionReq {
  BlockFilter filter = 1;
  uint32 confirmation_depth = 2;
  uint64 start_height = 3;
}

message BlocksSubscriptionRes {
  message Failure {
    oneof reason {
      string invalid_request = 1;
      string data_connection_error = 2;
    }
  }

  oneof result {
    Block success = 1;
    Failure failure = 2;
  }
}
